--- a/Skilaverkefni03/makefile
+++ b/Skilaverkefni03/makefile
@@ -1,6 +1,6 @@
 default: compile clear run
 compile:
-	g++ -o huffman.exe -std=c++11 huffman.cpp
+	g++ -o huffman.exe -std=c++11 huffman.cpp tree.cpp
 
 clear:
 	clear
